<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/q7_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="@dimen/padding_16"
            android:text="@string/q7"
            android:textSize="@dimen/textSize_16" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/q7" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <RadioGroup
            android:id="@+id/q7_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingEnd="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:text="@string/q7_o1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingEnd="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:text="@string/q7_o2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingEnd="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:text="@string/q7_o3" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingEnd="@dimen/padding_16"
                android:paddingStart="@dimen/padding_16"
                android:text="@string/q7_o4" />
        </RadioGroup>
    </android.support.v7.widget.CardView>

</LinearLayout>
