<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/q5_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="@dimen/padding_16"
            android:text="@string/q5"
            android:textSize="@dimen/textSize_16" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/q5" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_8"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q5_cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/q5_o1" />

            <CheckBox
                android:id="@+id/q5_cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/q5_o2" />

            <CheckBox
                android:id="@+id/q5_cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/q5_o3" />

            <CheckBox
                android:id="@+id/q5_cb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/q5_o4" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
